--- a/quotation/package.json
+++ b/quotation/package.json
@@ -2,7 +2,7 @@
   "name": "quotation",
   "version": "0.1.0",
   "private": true,
-  "homepage": "react-quotation",
+  "homepage": "https://fivemservertest.github.io/quotation",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
