--- a/my-gpa/package.json
+++ b/my-gpa/package.json
@@ -2,7 +2,7 @@
   "name": "my-gpa",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fivemservertest.github.io/my-gpa",
+  "homepage": "https://fivemservertest.github.io/my-gpa/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
